Fix alignment of checkout success message (Z#2399724)
When a customized checkout_success_text is used, that has other elements than `<p>`, the alignment was off. This fixes the alignment for all types of elements, that are a direct child of the thank-you-element `.thank-you > *`.

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -569,16 +569,17 @@ td > .dl-horizontal {
         width: 70%;
         margin: auto;
 
-        .fa {
+        & > .fa {
             float: left;
             margin-right: 30px;
+            margin-left: 0;
         }
 
         h2 {
             padding-top: 25px;
         }
 
-        p {
+        & > * {
             margin-left: 158px;
         }
     }
